notebooks/5_load_testing/deployment-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: <image URI>
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "512M"
            cpu: "1"
      restartPolicy: Always
