notebooks/5_load_testing/service-locust.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-service
spec:
  selector:
    app: locust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8089
  type: ClusterIP
